add a loop with range to template

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -22,11 +22,13 @@
 <body>
     <h1><img src="images/logo.png" alt="Frontend Masters Museum" width="300" fetchpriority="high"></h1>
     <main>
+        {{ range .}}
         <article>
             <h2>{{ .Title }}</h2>
             <p>{{ .Description }}</p>
             <img src="gallery/{{ .Image }}" fetchpriority="high" decoding="sync">
         </article>
+        {{ end }}
     </main>
 </body>
 
